droneai/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: droneai-web
  labels:
    app: droneai-web
spec:
  type: NodePort
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: droneai
---
kind: Service
apiVersion: v1
metadata:
  name: droneai-video-stream
  labels:
    app: droneai-video-stream
spec:
  type: ClusterIP
  ports:
    - name: 11111-udp
      protocol: UDP
      port: 11111
      targetPort: 11111
  selector:
    app: droneai
