droneai/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: droneai
  labels:
    app: droneai
spec:
  to:
    kind: Service
    name: droneai-web
    weight: 100
  port:
    targetPort: 5000-tcp
  wildcardPolicy: None
